ms version API endpoints
