# internal/model/microservice.go
@@ -8,9 +8,11 @@ import (
 
 type Microservice struct {
 	gorm.Model
-	ID          uuid.UUID      `gorm:"type:uuid"`
-	Name        string         `gorm:"uniqueIndex:ms_name_uniq_idx"`
-	Description sql.NullString `gorm:"type:text"`
+	ID             uuid.UUID             `gorm:"type:uuid"`
+	Name           string                `gorm:"type:varchar(100);not null;uniqueIndex:ms_name_uniq_idx"`
+	Description    sql.NullString        `gorm:"type:text"`
+	Versions       []MicroserviceVersion `gorm:"foreignKey:MicroserviceID"`
+	CurrentVersion *MicroserviceVersion  `gorm:"-"`
 }
 
 func (m *Microservice) BeforeCreate(tx *gorm.DB) error {
@@ -21,12 +23,12 @@ func (m *Microservice) BeforeCreate(tx *gorm.DB) error {
 type MicroserviceVersion struct {
 	gorm.Model
 	ID             uuid.UUID      `gorm:"type:uuid"`
-	MicroserviceID uuid.UUID      `gorm:"type:uuid;uniqueIndex:ms_version_uniq_idx"`
-	Microservice   Microservice   `gorm:"foreignKey:MicroserviceID"`
-	Name           string         `gorm:"uniqueIndex:ms_version_uniq_idx"`
+	MicroserviceID uuid.UUID      `gorm:"type:uuid;not null;index"`
+	Microservice   Microservice   `gorm:"foreignKey:MicroserviceID;constraint:OnDelete:CASCADE"`
+	Name           string         `gorm:"type:varchar(30);not null;uniqueIndex:ms_version_uniq_idx"`
 	Description    sql.NullString `gorm:"type:text"`
-	Url            string
-	OpenAPIUrl     string
+	Url            string         `gorm:"type:varchar;not null"`
+	OpenAPIUrl     string         `gorm:"type:varchar;not null"`
 }
 
 func (mv *MicroserviceVersion) BeforeCreate(tx *gorm.DB) error {
